# rust-module

./: .generate_pdf.sh  .generate_readme.md.sh  .get_git_tools.sh  .gitignore  .merge_notebooks.sh  README.md
.solutions/00-test-emscripten-hello-world-c/: main.c  main.js  main.wasm
.solutions/01-first-step/: Cargo.toml
.solutions/02-first-step-with-npm/: Cargo.toml  clean.sh  index.html  run.sh
.solutions/02-first-step-with-npm-site/: index.js  package.json  webpack.config.js
.solutions/03-first-step-with-console/: Cargo.toml  clean.sh  run.sh
.solutions/04-rust-structure/: Cargo.toml  run.sh
.solutions/05-module-import/: Cargo.toml  Cargo1.toml  lib0.rs  lib1.rs  run.sh
.solutions/06-panic-and-log/: run.sh
.solutions/07-start-from-wasm/: Cargo.toml  index.html  webpack.config.js
.solutions/07-start-from-wasm/src/: lib.rs
.solutions/08-xterm-crate/: Cargo.toml  index.js
.solutions/09-js-sys/: index.html  index.js  package.json
.solutions/10-test/: Cargo.toml  package-lock.json
.solutions/10-test/site/: webpack.config.js
.solutions/10-test/site/public/: index.html
.solutions/11-WebSocket-Client-WASM/: Cargo.toml
.solutions/11-WebSocket-Client-WASM/src/: lib.rs
.solutions/12-WebSocket-Client-WASM-XTERM/: Cargo.toml  clean.sh  webpack.config.js
.solutions/13-WebSocket-Server-2/: Cargo.toml
.solutions/implementations/: Cargo.toml
notebooks/: README.ipynb
notebooks/001 Getting started/: 001 What is rust.ipynb  002 Install.ipynb  003 Hello Cargo.ipynb  004 Documentations.ipynb  005 Editors.ipynb
notebooks/002 Basics/: 001 Basic types.ipynb  002 Variables and Mutability.ipynb  003 Functions.ipynb  004 Code Bloc and Scope.ipynb  005 Control Flow.ipynb  006 Namespaces.ipynb  007 Unitary tests.ipynb  008 TP FIBONACCI.ipynb
notebooks/003 Custom types, derives and methods/: 001 Struct.ipynb  002 Enum.ipynb  003 Derives.ipynb  004 Methods.ipynb  005 TP IMPLEMENTATIONS.ipynb
notebooks/004 if let and pattern matching/: 001 if let.ipynb  002 Pattern Matching.ipynb  003 TP MATCH OR MATCH.ipynb
notebooks/005 Result and Option/: 001 Option.ipynb  002 Result.ipynb
notebooks/006 Rust Key Concepts/: 001 Expressions.ipynb  002 Ownership.ipynb  003 Type Inference.ipynb  (+6 more)
programs/: colored_crate  concurrency  fibonacci  implementations  iterator  matchormatch  rand_crate
(+76 files in other folders)
