[package]
name = "WebSocket-Client-WASM"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
wasm-logger = "0.2.0"
log = "0.4.6"
console_error_panic_hook = { version = "0.1.7"}
js-sys = "0.3.63"
     
[dependencies.web-sys]
version = "0.3.63"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'MessageEvent',
  'WebSocket',
  'ErrorEvent',
]
